tests/lexer/invalid/test_malformed_number.src
// Тест 4: Неправильные числа
123.456.789
.123
123.
12.34.56